# knapsack2

./: CMakeLists.txt  README.md  knapsack.pc.in  knapsackConfig.cmake.in
benchmark/: CMakeLists.txt  downloadGBenchmark.cmake.in  knapsack_benchmark.cpp
include/knapsack/: definitions.hpp  utilities.hpp
include/knapsack/simple/: dynamic.hpp  recursive.hpp
test/: CMakeLists.txt  knapsack_test.cpp
